# terminal-agent

./: .gitignore  Containerfile  LICENSE  README.md  agent.py  install.ps1  install.sh  pyproject.toml  requirements.txt  run-sandboxed.sh
.github/workflows/: release.yml
src/terminal_agent/: __init__.py  agent.py
