[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-terminal-agent"
version = "0.2.4"
description = "A coding agent for the terminal, powered by Ollama Cloud"
readme = "README.md"
license = "MIT OR Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Noah Sabaj"}
]
keywords = ["ai", "coding", "agent", "ollama", "terminal", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "ollama",
    "pygments",
    "rich",
]

[project.scripts]
terminal-agent = "terminal_agent:run_agent"

[project.urls]
Homepage = "https://github.com/noahsabaj/open-terminal-agent"
Repository = "https://github.com/noahsabaj/open-terminal-agent"
Issues = "https://github.com/noahsabaj/open-terminal-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_agent"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/terminal_agent/agent.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_implicit_optional = true
